--- a/Week-3/Assignment 3.1/index.html
+++ b/Week-3/Assignment 3.1/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Memoize</title>
 </head>
 <body>
-    
+    <h1>Memoize function</h1>
+    <p>Check console...</p>
 </body>
 <script src="memoize.js"></script>
 </html>
