--- a/Week-3/Assignment 3.2/index.html
+++ b/Week-3/Assignment 3.2/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Call apply Bind</title>
-</head>
-<body>
-    <h1>Call</h1>
+  </head>
+  <body>
     <h1>Bind</h1>
+    <h1>Call</h1>
     <h1>Apply</h1>
-</body>
-<script src="script.js"></script>
+    <p>Check console...</p>
+  </body>
+  <script src="script.js"></script>
 </html>
